# advent-of-code-2020

./: .gitignore  Cargo.toml
common/: Cargo.toml
common/src/: lib.rs
day1/: Cargo.toml
day1/src/: main.rs
day2/: Cargo.toml
day2/src/: main.rs
day3/: Cargo.toml
day3/src/: main.rs
day4/: Cargo.toml
day4/src/: main.rs
src/: lib.rs
src/common/: mod.rs
src/passport/: eyecolor.rs  height.rs  mod.rs
