[package]
name = "advent-of-code-2020"
version = "0.1.0"
authors = ["Tristan Deloche <tde@hey.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1.4.0"

[lib]
name = "common"
path = "common/src/lib.rs"

[[bin]]
name = "day1"
path = "day1/src/main.rs"

[[bin]]
name = "day2"
path = "day2/src/main.rs"

[[bin]]
name = "day3"
path = "day3/src/main.rs"

[[bin]]
name = "day4"
path = "day4/src/main.rs"
